Fix long sized skill on mobile
api platform was too long and made contact section jump

--- a/app.css
+++ b/app.css
@@ -181,6 +181,11 @@ a:hover {
     letter-spacing: 10px;
     margin-top: 10rem;
 }
+@media screen and (max-width: 550px) {
+    #displayed-skill {
+        height: 60px;
+    }
+}
 /* CONTACT */
 #contact {
     margin-top: 8rem;
